# navigate-connector

./: README.md  environment.yml  get_appointments.py  pyproject.toml  setup.py
navigate_connector/: __init__.py  navigate_api.py  navigate_sftp.py
