[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "navigate-connector"
version = "0.1.0"
description = "A Python connector for interacting with the Navigate API and SFTP service."
authors = [{ name = "Isaac Kerson", email = "ikerson@gsu.edu" }]
license = { file = "LICENSE" }
dependencies = ["requests", "pandas", "keyring", "paramiko"]
readme = "README.md"
requires-python = ">=3.7"
